--- a/redhat-workshop-cicd-gitops/04-cicd.html
+++ b/redhat-workshop-cicd-gitops/04-cicd.html
@@ -245,7 +245,7 @@
     <li><a href="04-cicd.html">4. CI/CD Workflow</a></li>
   </ul>
 </nav>
-  <div class="edit-this-page"><a href="https://github.com/acidonper/redhat-workshop-cicd-gitops/edit/master/documentation/modules/ROOT/pages/04-cicd.adoc">Edit this Page</a></div>
+  <div class="edit-this-page"><a href="https://github.com/davidseve/redhat-workshop-cicd-gitops/edit/master/documentation/modules/ROOT/pages/04-cicd.adoc">Edit this Page</a></div>
   </div>
   <div class="content">
 <article class="doc">
@@ -505,7 +505,7 @@ git push origin cicd</code></pre>
 <div class="ulist">
 <ul>
 <li>
-<p>At this point, go to  <em>Networking &#8594; Routes</em> and copy <strong>eventlistener-front-javascript-v1-deploy</strong> public URL</p>
+<p>At this point, go to  <em>Networking &#8594; Routes</em> and copy <strong>el-front-javascript</strong> public URL</p>
 </li>
 </ul>
 </div>
