[CI] Publish Documentation for 8c15f039db823851ccbf7e3a7272f0317b7cdd0e - 8c15f039db823851ccbf7e3a7272f0317b7cdd0e 🚀

--- a/redhat-workshop-cicd-gitops/02-deployment.html
+++ b/redhat-workshop-cicd-gitops/02-deployment.html
@@ -1043,7 +1043,7 @@ git push origin master</code></pre>
 <div class="ulist">
 <ul>
 <li>
-<p>Application Name &#8594; <strong>&lt;username&gt;-jump-app</strong></p>
+<p>Application Name &#8594; <strong>&lt;username&gt;-jump-app-dev</strong></p>
 </li>
 <li>
 <p>Project &#8594; <strong>&lt;argocd_project&gt;</strong></p>
