--- a/redhat-workshop-cicd-gitops/04-cicd.html
+++ b/redhat-workshop-cicd-gitops/04-cicd.html
@@ -554,7 +554,10 @@ git push origin cicd</code></pre>
 <p>Content type &#8594; <strong>application/json</strong></p>
 </li>
 <li>
-<p>SSL verification &#8594; <strong>Disabled</strong></p>
+<p>Secret &#8594; <strong>s3cr3t-d@t@</strong></p>
+</li>
+<li>
+<p>SSL verification &#8594; <strong>Enable</strong></p>
 </li>
 </ul>
 </div>
